eric-am-common-wfs-server/src/test/resources/contracts/api/internal/post/negative/validateClusterConfig/withMultipleClusterUserContext.config
apiVersion: v1
clusters:
- cluster:
    certificate-authority-data: LS0tLS1CRUdJaWg4L3QrZ3Y0bVFPUlBnQnhsM0RGNUVkYz0KLS0tLS1FTkQgQ0VSVElGSUNBVEUtLS0tLQo=
    server: https://1.1.1.1:1111
  name: cluster01
- cluster:
    certificate-authority-data: LS0tQgQ0VSVElGSUNBVEUtLS0tLQo=
    server: https://2.2.2.2:2222
  name: cluster02
contexts:
- context:
    cluster: user02
    user: user01
  name: context01
- context:
    cluster: cluster01
    namespace: test2020
    user: user02
  name: context02
current-context: context02
kind: Config
preferences: {}
users:
- name: user01
  user:
    client-certificate-data: RCSlhyQ2pwbGxJbzFJa2l2NjJuUXVtMGFUdHpWNFJUMXBFM0Z4dW9OMDJxeQpyMWdQUGlNaWg4OFkxSnZMYllMQUorOVJBZnBMR2l6NWkvZThXY3BxOFV3dHdRcnd1QUFBU05FY2dzeFIrSkhoCnJtVDNCR1hYczJWLzRBVHowQTc4ZmZ0a1lhTDVDWVFvTVFRV0d4ZEJsK3ZuVlV6cmZSOD0KLS0tLS1FTkQgQ0VSVElGSUNBVEUtLS0tLQo=
    client-key-data: FZPQotLS0tLUVORCBSU0EgUFJJVkFURSBLRVktLS0tLQo=
- name: user02
  user:
    client-certificate-data: 05halZnUFdEQ0x1MkxndXhEYTdQdWY2WT0KLS0tLS1FTkQgQ0VSVElGSUNBVEUtLS0tLQo=
    client-key-data: RnFUQ0pPaEhEZlJzSG5jdzM3UlRVbUE9Ci0tLS0tRU5EIFJTQSBQUklWQVRFIEtFWS0tLS0tCg==
